--- a/0x02-CSS_advanced/styles/16-style.css
+++ b/0x02-CSS_advanced/styles/16-style.css
@@ -427,7 +427,8 @@ a:active {
 /* Wide and evenly distribute margins */
 .container {
     width: 960px;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* Custom global variables */
