--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -482,12 +482,14 @@ a:active {
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 4%;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 0 0 3 0; 
+    --nav-item-margin: 0 0 3rem 0; 
     --nav-item-link-hover: var(--color-primary);
 }
 
+/* Navbar tags
+========================================================================== */
 .navbar-menu {
     float: right;
 }
@@ -499,7 +501,7 @@ a:active {
     text-align: center;
 }
 
-nav.nav-item {
+.nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -508,12 +510,12 @@ nav.nav-item {
     margin: var(--nav-item-margin);
 }
 
-.nav-link {
+.nav .nav-link {
     display: block;
-    padding: 50% 100%;
+    padding: 0.5em 1em;
 }
 
-.nav-link:hover {
+.nav .nav-link:hover {
     color: var(--nav-item-link-hover)
 }
 
