--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -512,7 +512,7 @@ a:active {
 
 .nav .nav-link {
     display: block;
-    padding: 0.5em 1em;
+    padding: 0.5rem 1rem;
 }
 
 .nav .nav-link:hover {
