--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -471,7 +471,7 @@ ul.row {
     padding: 0.5rem;
 }
 
-.data-section-theme {
+[data-section-theme] {
     background-color: var(--color-black);
 }
 
