Add a dark theme to sections

--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -472,7 +472,7 @@ ul.row {
 }
 
 [data-section-theme="dark"] {
-    background-color: var(--color-black);
+    background: var(--color-black);
 }
 
 /* Wide and evenly distribute margins */
