Add background and hover state to services

--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -407,7 +407,7 @@ a:active {
     color: var(--color-primary);
 }
 
-.card-services > .card-title {
+.card-services .card-title {
     margin: 0;    
 }
 
