Add border to the button

--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -401,7 +401,7 @@ a:active {
 .button {
     display: var(--button-display);
     padding: var(--button-padding);
-    border-style: var(--button-border);
+    border: var(--button-border);
     font-size: var(--button-font-size);
     color: var(--button-color);
     text-decoration: var(--button-text-decoration);
@@ -410,7 +410,7 @@ a:active {
 .button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--color-primary);
+    background-color: var(--button-hover-background);
 }
 
 .visually-hidden {
