--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -143,7 +143,7 @@ a:active {
     z-index: 1;
 }
 
-.card-work:hover .card.card-inner {
+.card-work:hover .card-inner {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
