Assign color variable

--- a/0x03-sass_scss/1-color_variable.scss
+++ b/0x03-sass_scss/1-color_variable.scss
@@ -1,6 +1,8 @@
 /* Assign color variable */
 body {
-  color: #3D3D3D; }
+    color: #3D3D3D;
+}
 
 p {
-  color: #3D3D3D; }
+    color: #3D3D3D;
+}
