Assign color variable

--- a/0x03-sass_scss/1-color_variable.scss
+++ b/0x03-sass_scss/1-color_variable.scss
@@ -1,8 +1,7 @@
 /* Assign color variable */
+$color: #3D3D3D;
 body {
-    color: #3D3D3D;
-}
+    color: $color }
 
 p {
-    color: #3D3D3D;
-}
+    color: $color}
