--- a/0x03-sass_scss/7-nested_deeper.scss
+++ b/0x03-sass_scss/7-nested_deeper.scss
@@ -7,7 +7,7 @@ body {
     font-size: $size1;
     h1 {
         font-size: $size2;
-        .smaller {
+        &.smaller {
             font-size: $size3; }
     }
 }
