--- a/0x03-sass_scss/100-loop_col.scss
+++ b/0x03-sass_scss/100-loop_col.scss
@@ -1,4 +1,4 @@
 /* Creates classes with different width in columns. */
-@for $i from 1 through 5 {
-	.col-#{$i} { width: 100% / $i; }
+@for $i from 1 to 5 {
+	.col-#{$i} { width: 100% / $i }
 }
