--- a/0x0A-Bootstrap/6-styles.css
+++ b/0x0A-Bootstrap/6-styles.css
@@ -36,12 +36,9 @@
   -webkit-box-shadow: none !important;
 }
 
-a.text-dark:hover,
-a.text-dark:focus,
-a.text-muted:hover,
-a.text-muted:focus {
+a:hover,
+a:focus {
   color: #E0003C !important;
-  text-decoration: none;
 }
 
 .text-muted {
@@ -64,12 +61,8 @@ a.text-muted:focus {
   border-radius: 1rem !important;
 }
 
-.card-header,
-.card-footer {
+.card-header {
   background-color: #E0003C;
   color: #ffff;
-}
-
-.card-header:first-child {
-  border-radius: 1rem 1rem 0 0;
+  border-radius: 1rem 1rem 0 0 !important;
 }
